--- a/QuestionnaireMultiagent.csproj
+++ b/QuestionnaireMultiagent.csproj
@@ -6,18 +6,32 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UserSecretsId>aa3ccc52-1020-4a40-bd43-e91a5e33ed39</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
 	<PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.17" />
 	<PackageReference Include="Azure.AI.OpenAI.Assistants" Version="1.0.0-beta.4" />
 	<PackageReference Include="Azure.Core" Version="1.40.0" />
-	<PackageReference Include="Microsoft.SemanticKernel" Version="1.15.1" />
-	<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.15.1-alpha" />
-	<PackageReference Include="Microsoft.SemanticKernel.Agents.OpenAI" Version="1.15.1-alpha" />
-	<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.15.1" />
-	<PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.15.1" />
-	<PackageReference Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.15.1-alpha" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  <PackageReference Include="Microsoft.SemanticKernel" Version="1.16.1" />
+  <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.16.1-alpha" />
+  <PackageReference Include="Microsoft.SemanticKernel.Agents.OpenAI" Version="1.16.1-alpha" />
+  <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.16.1" />
+  <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.16.1" />
+  <PackageReference Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.16.1-alpha" />
+  <PackageReference Include="Serilog" Version="4.0.1" />
+  <PackageReference Include="Serilog.Enrichers.Context" Version="4.6.5" />
+  <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+  <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+  <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+  <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+  <PackageReference Include="Serilog.HttpClient" Version="3.0.0" />
+  <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+  <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
